[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/cards/CardBase.gd" type="Script" id=1]
[ext_resource path="res://comici.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/background/background shade.png" type="Texture" id=3]
[ext_resource path="res://assets/cards/card.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[node name="CardBase" type="MarginContainer"]
margin_right = 250.0
margin_bottom = 350.0
rect_min_size = Vector2( 250, 350 )
hint_tooltip = "hehexd"
script = ExtResource( 1 )

[node name="Card" type="Sprite" parent="."]
position = Vector2( 125, 175 )
texture = ExtResource( 4 )

[node name="Bar" type="VBoxContainer" parent="Card" groups=["control_children"]]
margin_left = -125.0
margin_top = -175.0
margin_right = 125.0
margin_bottom = 191.0

[node name="TopGap" type="MarginContainer" parent="Card/Bar" groups=["control_children"]]
margin_right = 250.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )

[node name="TopBar" type="HBoxContainer" parent="Card/Bar" groups=["control_children"]]
margin_top = 9.0
margin_right = 250.0
margin_bottom = 66.0

[node name="LeftGap" type="MarginContainer" parent="Card/Bar/TopBar" groups=["control_children"]]
margin_right = 10.0
margin_bottom = 57.0
rect_min_size = Vector2( 10, 50 )

[node name="Damage" type="MarginContainer" parent="Card/Bar/TopBar" groups=["control_children"]]
margin_left = 14.0
margin_right = 64.0
margin_bottom = 57.0
rect_min_size = Vector2( 50, 50 )

[node name="HBoxContainer" type="HBoxContainer" parent="Card/Bar/TopBar/Damage" groups=["control_children"]]
margin_right = 50.0
margin_bottom = 57.0

[node name="Damage" type="Label" parent="Card/Bar/TopBar/Damage/HBoxContainer"]
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )

[node name="MidBar" type="HBoxContainer" parent="Card/Bar" groups=["control_children"]]
margin_top = 70.0
margin_right = 250.0
margin_bottom = 185.0

[node name="LeftGap" type="MarginContainer" parent="Card/Bar/MidBar" groups=["control_children"]]
margin_right = 85.0
margin_bottom = 115.0
rect_min_size = Vector2( 85, 115 )

[node name="CardName" type="MarginContainer" parent="Card/Bar/MidBar" groups=["control_children"]]
margin_left = 89.0
margin_right = 89.0
margin_bottom = 115.0

[node name="HBoxContainer" type="HBoxContainer" parent="Card/Bar/MidBar/CardName" groups=["control_children"]]
margin_bottom = 115.0

[node name="CardName" type="Label" parent="Card/Bar/MidBar/CardName/HBoxContainer" groups=["control_children"]]
margin_top = 1.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 5 )

[node name="MidBar2" type="HBoxContainer" parent="Card/Bar" groups=["control_children"]]
margin_top = 189.0
margin_right = 250.0
margin_bottom = 279.0

[node name="LeftGap" type="MarginContainer" parent="Card/Bar/MidBar2" groups=["control_children"]]
margin_right = 10.0
margin_bottom = 90.0
rect_min_size = Vector2( 10, 50 )

[node name="Description" type="MarginContainer" parent="Card/Bar/MidBar2" groups=["control_children"]]
margin_left = 14.0
margin_right = 234.0
margin_bottom = 90.0
rect_min_size = Vector2( 220, 90 )

[node name="NinePatchRect" type="NinePatchRect" parent="Card/Bar/MidBar2/Description" groups=["control_children"]]
margin_right = 220.0
margin_bottom = 90.0
texture = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="Card/Bar/MidBar2/Description" groups=["control_children"]]
margin_right = 220.0
margin_bottom = 90.0

[node name="Description" type="Label" parent="Card/Bar/MidBar2/Description/CenterContainer" groups=["control_children"]]
margin_left = 10.0
margin_top = 20.0
margin_right = 210.0
margin_bottom = 70.0
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = SubResource( 3 )
align = 1
autowrap = true

[node name="BotBar" type="HBoxContainer" parent="Card/Bar" groups=["control_children"]]
margin_top = 283.0
margin_right = 250.0
margin_bottom = 340.0

[node name="LeftGap" type="MarginContainer" parent="Card/Bar/BotBar" groups=["control_children"]]
margin_right = 10.0
margin_bottom = 57.0
rect_min_size = Vector2( 10, 0 )

[node name="Word" type="MarginContainer" parent="Card/Bar/BotBar" groups=["control_children"]]
margin_left = 14.0
margin_right = 64.0
margin_bottom = 57.0
rect_min_size = Vector2( 50, 50 )

[node name="HBoxContainer" type="HBoxContainer" parent="Card/Bar/BotBar/Word" groups=["control_children"]]
margin_right = 50.0
margin_bottom = 57.0

[node name="Word" type="Label" parent="Card/Bar/BotBar/Word/HBoxContainer" groups=["control_children"]]
margin_bottom = 57.0
custom_fonts/font = SubResource( 1 )

[node name="MidGap" type="MarginContainer" parent="Card/Bar/BotBar" groups=["control_children"]]
margin_left = 68.0
margin_right = 183.0
margin_bottom = 57.0
rect_min_size = Vector2( 115, 0 )

[node name="Draw" type="MarginContainer" parent="Card/Bar/BotBar" groups=["control_children"]]
margin_left = 187.0
margin_right = 237.0
margin_bottom = 57.0
rect_min_size = Vector2( 50, 50 )

[node name="HBoxContainer" type="HBoxContainer" parent="Card/Bar/BotBar/Draw" groups=["control_children"]]
margin_right = 50.0
margin_bottom = 57.0
alignment = 2

[node name="Draw" type="Label" parent="Card/Bar/BotBar/Draw/HBoxContainer" groups=["control_children"]]
margin_left = 50.0
margin_right = 50.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 4 )
align = 2
